--- a/config
+++ b/config
@@ -14,6 +14,7 @@ _NGX_WAFFLEX_SRCS="\
   ${ngx_addon_dir}/src/ruleset/action.c \
   ${ngx_addon_dir}/src/ruleset/limiter.c \
   ${ngx_addon_dir}/src/ruleset/list.c \
+  ${ngx_addon_dir}/src/ruleset/phase.c \
   ${ngx_addon_dir}/src/ruleset/ruleset.c \
 "
 
