--- a/config
+++ b/config
@@ -13,6 +13,7 @@ _NGX_WAFFLEX_SRCS="\
   ${ngx_addon_dir}/src/ruleset/rule.c \
   ${ngx_addon_dir}/src/ruleset/condition.c \
   ${ngx_addon_dir}/src/ruleset/action.c \
+  ${ngx_addon_dir}/src/ruleset/tag.c \
   ${ngx_addon_dir}/src/ruleset/limiter.c \
   ${ngx_addon_dir}/src/ruleset/list.c \
   ${ngx_addon_dir}/src/ruleset/phase.c \
