--- a/config
+++ b/config
@@ -1,7 +1,8 @@
 ngx_addon_name=ngx_wafflex_module
 
 _NGX_WAFFLEX_UTIL_SRCS="\
-${ngx_addon_dir}/src/util/wfx_lua.c \
+  ${ngx_addon_dir}/src/util/wfx_str.c \
+  ${ngx_addon_dir}/src/util/wfx_lua.c \
   ${ngx_addon_dir}/src/util/ipc.c \
   ${ngx_addon_dir}/src/util/shmem.c \
   ${ngx_addon_dir}/src/util/ngx_shmem_hacked_slab.c \
@@ -10,6 +11,7 @@ ${ngx_addon_dir}/src/util/wfx_lua.c \
 _NGX_WAFFLEX_SRCS="\
   ${_NGX_WAFFLEX_UTIL_SRCS} \
   ${ngx_addon_dir}/src/ngx_wafflex.c \
+  ${ngx_addon_dir}/src/ruleset/string.c \
   ${ngx_addon_dir}/src/ruleset/rule.c \
   ${ngx_addon_dir}/src/ruleset/condition.c \
   ${ngx_addon_dir}/src/ruleset/action.c \
