the basics of configuration

--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -20,6 +20,9 @@ events {
 }
 
 http {
+  wafflex_load_ruleset testruleset.json;
+  wafflex_ruleset testruleset;
+  
   access_log /dev/stdout;
 #  access_log /dev/stdout;
   default_type  application/octet-stream;
