--- a/config
+++ b/config
@@ -10,6 +10,7 @@ _NGX_WAFFLEX_UTIL_SRCS="\
 
 _NGX_WAFFLEX_SRCS="\
   ${_NGX_WAFFLEX_UTIL_SRCS} \
+  ${ngx_addon_dir}/src/ngx_wafflex_nginx_lua_scripts.c \
   ${ngx_addon_dir}/src/ngx_wafflex_setup.c \
   ${ngx_addon_dir}/src/ngx_wafflex.c \
   ${ngx_addon_dir}/src/ruleset/ruleset.c \
