--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -39,13 +39,19 @@ http {
     listen       8082;
     listen       8085   http2;
     #listen      18010;
-    #    root ./;
-    
-    location / {
-      root ./;
-    }
     
     wafflex_redis_url 127.0.0.1:6379/2;
     
+    location = /api {
+      #auth_request /auth;
+    }
+
+    location = /auth {
+      proxy_pass http://localhost:8080;
+      proxy_pass_request_body off;
+      proxy_set_header Content-Length "";
+      proxy_set_header X-Original-URI $request_uri;
+    }
+
   }
 }
