redisy settings in nginx.conf

--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -20,8 +20,12 @@ events {
 }
 
 http {
-  wafflex_load_ruleset testruleset.json;
+  wafflex_redis_url 127.0.0.1:6379/2;
+  
+  wafflex_load_ruleset_file testruleset.json;
+  
   wafflex_ruleset testruleset;
+  wafflex_ruleset my_redisy_ruleset;
   
   access_log /dev/stdout;
 #  access_log /dev/stdout;
@@ -39,8 +43,6 @@ http {
     listen       8082;
     listen       8085   http2;
     #listen      18010;
-    
-    wafflex_redis_url 127.0.0.1:6379/2;
     
     location = /api {
       #auth_request /auth;
