redis sub/unsub works well enough

--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -20,11 +20,11 @@ events {
 }
 
 http {
-  wafflex_redis_url 127.0.0.1:6379/2;
+  wafflex_redis_url localhost:6379/2;
   
   wafflex_load_ruleset_file testruleset.json;
   
-  wafflex_ruleset testruleset;
+  #wafflex_ruleset testruleset;
   wafflex_ruleset my_redisy_ruleset;
   
   access_log /dev/stdout;
