nicer sub/unsub and some othermiscellanea

--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -25,7 +25,7 @@ http {
   wafflex_load_ruleset_file testruleset.json;
   
   #wafflex_ruleset testruleset;
-  wafflex_ruleset my_redisy_ruleset;
+  wafflex_ruleset rlst;
   
   access_log /dev/stdout;
 #  access_log /dev/stdout;
